updating the detail portions of our personal website.

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>The beautiful state of Minnesota.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy coding (imagine that!), spending time with family and friends, and playing video games to unwind!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'd love to be a software developer or a game designer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I still reside in Minnesota, where I live with two killer roommates.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to have the technological tools to creatively help make people's lives simpler, more engaging, and generally more fun.</p>
     </section>
 
     <footer id="footer">
